--- a/GeoMinders/Base.lproj/Main.storyboard
+++ b/GeoMinders/Base.lproj/Main.storyboard
@@ -124,19 +124,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AhM-5Y-bgd">
-                                <rect key="frame" x="0.0" y="-11" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="BjP-38-Pwu">
-                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="Yy2-cj-TSF" id="hOg-u8-YJa"/>
-                                </connections>
-                            </searchBar>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="186-Tn-BHw">
-                                <rect key="frame" x="0.0" y="108" width="600" height="492"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <connections>
                                     <outlet property="delegate" destination="Yy2-cj-TSF" id="fBi-jh-AqZ"/>
                                 </connections>
@@ -153,6 +142,9 @@
                                             <segment title="400ft"/>
                                             <segment title="500ft"/>
                                         </segments>
+                                        <connections>
+                                            <action selector="segmentChanged" destination="Yy2-cj-TSF" eventType="valueChanged" id="K57-JI-0vh"/>
+                                        </connections>
                                     </segmentedControl>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -166,29 +158,39 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E3b-Oq-ASI">
                                 <rect key="frame" x="541" y="123" width="44" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="44" id="QbP-I3-ULm"/>
-                                    <constraint firstAttribute="height" constant="44" id="mA3-8y-OJs"/>
+                                    <constraint firstAttribute="height" constant="44" id="Bhz-G4-tPR"/>
+                                    <constraint firstAttribute="width" constant="44" id="YvM-BM-SM5"/>
                                 </constraints>
                                 <state key="normal" image="currentLocation"/>
                                 <connections>
                                     <action selector="currentLocationButton" destination="Yy2-cj-TSF" eventType="touchUpInside" id="RzE-3D-6M4"/>
                                 </connections>
                             </button>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="BjP-38-Pwu">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="iJx-Xz-dyD"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Yy2-cj-TSF" id="hOg-u8-YJa"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="BjP-38-Pwu" secondAttribute="trailing" id="49b-GN-EXA"/>
-                            <constraint firstAttribute="trailing" secondItem="E3b-Oq-ASI" secondAttribute="trailing" constant="15" id="5Xz-3W-M2H"/>
+                            <constraint firstAttribute="trailing" secondItem="E3b-Oq-ASI" secondAttribute="trailing" constant="15" id="0SK-Dj-EzC"/>
+                            <constraint firstItem="9fx-eE-xeX" firstAttribute="top" secondItem="186-Tn-BHw" secondAttribute="bottom" id="3bE-wH-BtX"/>
                             <constraint firstItem="onQ-4a-nkZ" firstAttribute="leading" secondItem="hP2-rK-lRV" secondAttribute="leading" id="Blx-4Z-G5U"/>
-                            <constraint firstItem="186-Tn-BHw" firstAttribute="leading" secondItem="hP2-rK-lRV" secondAttribute="leading" id="Fab-Zq-fc4"/>
                             <constraint firstItem="9fx-eE-xeX" firstAttribute="top" secondItem="onQ-4a-nkZ" secondAttribute="bottom" id="Jp2-df-q7t"/>
-                            <constraint firstItem="E3b-Oq-ASI" firstAttribute="top" secondItem="BjP-38-Pwu" secondAttribute="bottom" constant="15" id="VTI-1X-FLG"/>
-                            <constraint firstItem="BjP-38-Pwu" firstAttribute="leading" secondItem="hP2-rK-lRV" secondAttribute="leading" id="W5h-Ij-whi"/>
+                            <constraint firstItem="BjP-38-Pwu" firstAttribute="top" secondItem="YIY-vy-6a0" secondAttribute="bottom" id="QRX-Hx-TUr"/>
                             <constraint firstAttribute="trailing" secondItem="onQ-4a-nkZ" secondAttribute="trailing" id="Yly-a4-cer"/>
-                            <constraint firstItem="9fx-eE-xeX" firstAttribute="top" secondItem="186-Tn-BHw" secondAttribute="bottom" id="YtF-qe-LEU"/>
-                            <constraint firstItem="BjP-38-Pwu" firstAttribute="top" secondItem="YIY-vy-6a0" secondAttribute="bottom" id="gmY-7w-Xw0"/>
-                            <constraint firstAttribute="trailing" secondItem="186-Tn-BHw" secondAttribute="trailing" id="iPU-Lq-bNH"/>
-                            <constraint firstItem="186-Tn-BHw" firstAttribute="top" secondItem="BjP-38-Pwu" secondAttribute="bottom" id="wFm-G8-b11"/>
+                            <constraint firstAttribute="trailing" secondItem="186-Tn-BHw" secondAttribute="trailing" id="ZWS-Om-Ngq"/>
+                            <constraint firstItem="BjP-38-Pwu" firstAttribute="leading" secondItem="hP2-rK-lRV" secondAttribute="leading" id="bcB-eO-7ns"/>
+                            <constraint firstItem="186-Tn-BHw" firstAttribute="top" secondItem="YIY-vy-6a0" secondAttribute="bottom" id="eLX-Jx-b7h"/>
+                            <constraint firstAttribute="trailing" secondItem="BjP-38-Pwu" secondAttribute="trailing" id="fyZ-Ux-Cao"/>
+                            <constraint firstItem="186-Tn-BHw" firstAttribute="leading" secondItem="hP2-rK-lRV" secondAttribute="leading" id="p9V-Rb-xUJ"/>
+                            <constraint firstItem="E3b-Oq-ASI" firstAttribute="top" secondItem="BjP-38-Pwu" secondAttribute="bottom" constant="15" id="yiW-8n-40Q"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
