--- a/GeoMinders/Base.lproj/Main.storyboard
+++ b/GeoMinders/Base.lproj/Main.storyboard
@@ -106,7 +106,11 @@
                                 <action selector="cancel" destination="z30-RO-Sjh" id="VEN-1H-OlQ"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="lBS-FE-Yp2"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="editButton" destination="lBS-FE-Yp2" id="hGU-Ka-7Xz"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h8E-Ps-f65" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -247,18 +251,24 @@
                             </tableViewSection>
                             <tableViewSection id="Mqj-lh-fza">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="hrH-LM-h12" style="IBUITableViewCellStyleDefault" id="MgW-fd-gV3">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="MgW-fd-gV3">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MgW-fd-gV3" id="Et4-zJ-9wQ">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hrH-LM-h12">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83v-bL-6NO">
+                                                    <rect key="frame" x="15" y="0.0" width="577" height="43"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="83v-bL-6NO" firstAttribute="top" secondItem="Et4-zJ-9wQ" secondAttribute="top" id="5th-nm-W5e"/>
+                                                <constraint firstAttribute="trailing" secondItem="83v-bL-6NO" secondAttribute="trailing" constant="8" id="985-ka-yRz"/>
+                                                <constraint firstAttribute="bottom" secondItem="83v-bL-6NO" secondAttribute="bottom" id="KYb-qD-z7j"/>
+                                                <constraint firstItem="83v-bL-6NO" firstAttribute="leading" secondItem="Et4-zJ-9wQ" secondAttribute="leading" constant="15" id="tdV-cP-mLm"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
@@ -282,6 +292,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="addressLabel" destination="83v-bL-6NO" id="4xE-WT-TXd"/>
                         <outlet property="textField" destination="vAv-oQ-tyO" id="5Pw-Kl-8Jx"/>
                     </connections>
                 </tableViewController>
